# parallel_computing_exercises

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build_all.sh
04_12_2019/: CMakeLists.txt  README.md
04_12_2019/development/: CMakeLists.txt  main.cpp
06_11_2019/: CMakeLists.txt  README.md
06_11_2019/benchmark/: CMakeLists.txt  main.cpp
06_11_2019/benchmark_answer/: CMakeLists.txt  answer.cpp
11_12_2019/: CMakeLists.txt
11_12_2019/solve/: CMakeLists.txt  solve.cpp
13_11_2019/: CMakeLists.txt  README.md
13_11_2019/1D_convection/: 1D_linear_convection.cpp  CMakeLists.txt
15_01_2020/: README.md
18_12_2019/: CMakeLists.txt  README.md
18_12_2019/count1000/: CMakeLists.txt  count1000.cpp
18_12_2019/dining_philosophers_problem/: CMakeLists.txt  dining_philosophers.cpp
20_11_2019/: CMakeLists.txt  README.md
20_11_2019/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  MatrixUtils.cpp  MatrixUtils.hpp  main.cpp
22_01_2020/: CMakeLists.txt  README.md
22_01_2020/exercises/: CMakeLists.txt  main.cpp
22_01_2020/solutions_from_dharmin/: tasks.cpp
27_11_2019/: CMakeLists.txt  README.md  l.pgm
27_11_2019/Matrix/: CMakeLists.txt  Matrix.hpp  main.cpp  pgm_parser.h  ppImageUtils.cpp  ppImageUtils.hpp
27_11_2019/SimpleImageProcessing/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  MatrixUtils.cpp  MatrixUtils.hpp  main.cpp  ppImageUtils.cpp  ppImageUtils.hpp  tests.cpp
27_11_2019/tests/: tests.cpp
29_01_2020/: README.md
30_10_2019/: CMakeLists.txt  ReadMe.md
30_10_2019/find_pass/: CMakeLists.txt  ReadMe.md  main.cpp
30_10_2019/first_example/: CMakeLists.txt  main.cpp
30_10_2019/hello_world_threads/: CMakeLists.txt  main.cpp
30_10_2019/hello_world_threads_ubuntu/: CMakeLists.txt
Matrix/: CMakeLists.txt
Matrix/inc/: Matrix.hpp  MatrixUtils.hpp
Matrix/src/: Matrix.cpp  MatrixUtils.cpp
Matrix/tests/: tests.cpp
OPEN_MP/: CMakeLists.txt
OPEN_MP/open_mp/: CMakeLists.txt
triad_cpp/: triad_cpp.sln
triad_cpp/Debug/: triad_cpp.ilk  triad_cpp.pdb.REMOVED.git-id
triad_cpp/Release/: triad_cpp.iobj  triad_cpp.ipdb  triad_cpp.pdb.REMOVED.git-id
triad_cpp/triad_cpp/: main.cpp  triad_algo.cpp  triad_algo.h  triad_cpp.vcxproj  triad_cpp.vcxproj.filters  triad_naive.cpp  triad_naive.h
triad_cpp/triad_cpp/Debug/: vc141.idb
triad_cpp/triad_cpp/Debug/triad_cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  triad_cpp.lastbuildstate
triad_cpp/triad_cpp/Release/: main.obj.REMOVED.git-id  triad_algo.obj.REMOVED.git-id  triad_naive.obj.REMOVED.git-id
triad_cpp/triad_cpp/Release/triad_cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  triad_cpp.lastbuildstate  triad_cpp.write.1u.tlog
